Fixes Gap

--- a/frontend/src/css/modules/profile.scss
+++ b/frontend/src/css/modules/profile.scss
@@ -66,5 +66,9 @@ img.profile-pic {
 }
 
 .ev-md-container-ui {
-    padding: 10px 40px 40px 40px;
+    padding: 0px 40px 40px 40px;
+}
+
+.ev-md-container {
+    padding: 40px 40px 10px 40px;
 }
